--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: ./start.sh
+    startCommand: uvicorn caption:app --host 0.0.0.0 --port 10000
+
